# typed-parsy

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  tutorial.rst
docs/howto/: index.rst  lexing.rst
docs/ref/: generating.rst
examples/: dataclass_parser_demo.py  dataclass_parsing.py  dataclass_permutation_parser.py  json.py  regex_demo.py  sequence.py  simple_eval.py  simple_logo_lexer.py  sql_select.py  stateful_parsing.py  step_parser.py  table.py
parsy/: __init__.py
tests/: test_parsy.py  test_sexpr.py
